Styled div columns

--- a/index.html
+++ b/index.html
@@ -23,13 +23,13 @@
        
         <section class="wrapper">
             <div class="div-1">
-                Div 1
+                I was born and raised in the 802. I spent 4 years on the left coast with briefer stints in Portlandia, Ithaca and Bean Town. I always come back to the green mountains in the end.
             </div>
             <div class="div-2">
-                Div 2
+                My passion: History. Art. Maybe I am particularly intrigued by Ancient Art and Religion. There were over 2,000 deities in the Egyptian pantheon. I am trying to draw them all by hand.
             </div>
             <div class="div-3">
-                Div 3
+                A fun fact: I once rode by bike from Vermont to Missouri, and a few weeks later, San Diego to San Francisco. This is way trickier than a U-haul, but I highly recommend for your next move.
             </div>
         </section>    
 
